<resources>
    <string name="app_name">PhotoBook</string>
    <string name="action_settings">Settings</string>
    <string name="photo_title_label">Title</string>
    <string name="photo_date_label">Date</string>
    <string name="photo_description_label">Description</string>
    <string name="date_picker_title">Date you took the Photo:</string>
    <string name="new_photo">New</string>
    <string name="delete_photo">Delete</string>
    <string name="share_photo">Share</string>
    <string name="search_button">Search</string>
    <string name="image_not_available">Image Not Available</string>
    <string name="confirm_photo_delete">Confirm Delete</string>
    <string name="photo_note">Title: %1$s, Date: %2$s, Note: %3$s</string>
    <string name="delete_warning">The PhotoNote will be deleted!</string>
    <string name="delete_note">Delete</string>
    <string name="cancel_delete">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="terms_conditions_title">Terms and Conditions</string>
    <string name="about_us_title">About Us</string>
    <string name="privacy_policy_text1">Shubhdeep Singh built the PhotoBook app as a Free app. This SERVICE is provided by Shubhdeep Singh at no cost and is intended for use as is.
This page is used to inform the users regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at PhotoBook unless otherwise defined in this Privacy Policy.
</string>
<string name="privacy_policy_text2">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request is retained on your device and is not collected by me in any way
The app does use third party services that may collect information used to identify you.
Link to privacy policy of third party service providers used by the app
•	Google Play Services</string>
    <string name="privacy_policy_text3">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacy_policy_text4">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_policy_text5">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="privacy_policy_text6">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>
    <string name="tnc_text1">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Shubhdeep Singh.</string>
    <string name="tnc_text2">Shubhdeep Singh is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.</string>
    <string name="tnc_text3">The PhotoBook app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the PhotoBook app won’t work properly or at all.</string>
    <string name="tnc_text4">You should be aware that there are certain things that Shubhdeep Singh will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Shubhdeep Singh cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.</string>
    <string name="tnc_text5">If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.</string>
    <string name="tnc_text6">Along the same lines, Shubhdeep Singh cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Shubhdeep Singh cannot accept responsibility.</string>
    <string name="tnc_text7">With respect to Shubhdeep Singh’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Shubhdeep Singh accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.</string>
    <string name="tnc_text8">At some point, we may wish to update the app. The app is currently available on Android and iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Shubhdeep Singh does not promise that it will always update the app so that it is relevant to you and/or works with the iOS/Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.</string>
    <string name="tnc_text9">I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="tnc_text10">If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me.</string>
    <string name="aboutus_text1">“PhotoBook” is an app that was initially focussed on providing a means to store valuable memories instead of just images. We intended to create an app that would allow people to write something about a photograph they took, just like the old days. Only this time they would be able to do it on their mobile phones, where almost all the pictures are these days. The major challenge was to keep the hassle of adding new images to the minimum. This prompted us to develop an app that would allow users to “open and start writing” just like a notebook without the need to press Edit button or a save button once done. Hence the name “PhotoBook”. Users can add a new PhotoNote by pressing the onscreen Plus (+) icon, just like turning a new page of a notebook and Write/Edit. We also wanted to add customizable date which is very important for the safe keeping of memories. Users can also Search for a photo unlike most Gallery apps. So no more scrolling through hundreds of images. Search the title and start editing.
</string><string name="aboutus_text2">“PhotoBook” can be used to-</string>
<string name="aboutus_text3">1.	Store Photos with written memories</string>
<string name="aboutus_text4">2.	Create Instant Notes</string>
<string name="aboutus_text5">3.	Keep track of Progress</string>
<string name="aboutus_text6">4.	Write a Daily Diary</string>
</resources>
