<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Terms and Conditions"
            android:id="@+id/textView"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"/>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text1"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text2"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text3"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text4"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text5"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text6"
            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text7"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text8"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Changes to This Terms and Conditions"
            android:id="@+id/tnc_textView1"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text9"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Contact Us"
            android:id="@+id/tnc_textView2"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tnc_text10"
            />


    </LinearLayout>
</ScrollView>