<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Privacy Policy"
        android:id="@+id/textView"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
    android:id="@+id/privacy_policy_textview1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/privacy_policy_text1"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Information Collection and Use"
        android:id="@+id/textView2"
        />
    <TextView
        android:id="@+id/privacy_policy_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_text2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Log Data"
        android:id="@+id/textView3"/>
    <TextView
        android:id="@+id/privacy_policy_textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_text3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Links to Other Sites"
        android:id="@+id/textView4"/>
    <TextView
        android:id="@+id/privacy_policy_textview4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_text4"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Changes to This Privacy Policy "
        android:id="@+id/textView5"/>
    <TextView
        android:id="@+id/privacy_policy_textview5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_text5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Contact Us"
        android:id="@+id/textView6"/>
    <TextView
        android:id="@+id/privacy_policy_textview6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_text6"
        />
    </LinearLayout>
</ScrollView>