<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:focusableInTouchMode="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_name3"
            android:background="@android:color/darker_gray"
            />


        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_alignBottom="@id/photo"
            android:layout_alignRight="@id/photo"
            android:src="@drawable/ic_action_name"
            />

    </RelativeLayout>



    <TextView
        android:textColor="@color/appPrimary"
        android:text="@string/photo_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/photo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:textColor="@color/appPrimary"
        android:text="@string/photo_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginRight="16dp"
          android:layout_weight="4">
          <TextView
              android:id="@+id/photo_date_text"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:textColor="@android:color/black"
              android:padding="12dp"
              android:layout_marginTop="4dp"
              android:layout_weight="4"
              android:textStyle="normal"/>
      </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/photo_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_name2"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textColor="@color/appPrimary"
        android:text="@string/photo_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/photo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
</LinearLayout>
    </ScrollView>